load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
)

go_library(
    name = "main",
    srcs = ["main.go"],
    deps = [
        "@com_github_zalando_keyring//:go_default_library",
    ],
    importpath = "github.com/ReneHollander/pinentry-keyring/main",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "pinentry-keyring",
    embed = [":main"],
    visibility = ["//visibility:public"],
)
